Added std output to debugger in vs code.
Signed-off-by: tsmx <strs@freenet.de>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/service.js"
+            "program": "${workspaceFolder}/service.js",
+            "outputCapture": "std"
         }
     ]
 }
