--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Sebastian Stricker",
   "license": "ISC",
   "dependencies": {
+    "lodash": ">=4.17.13",
     "cron": "^1.7.1",
     "express": "^4.17.1",
-    "mongoose": "^5.6.5",
+    "mongoose": "^5.6.9",
     "winston": "^3.2.1"
   }
 }
